[project]
name = "ytblog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.5",
    "langchain-tavily>=0.2.6",
    "langgraph>=0.5.1",
    "markdown>=3.8.2",
    "pytube>=15.0.0",
    "youtube-transcript-api>=1.1.1",
    "yt-dlp>=2025.6.30",
]
